# pan

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build-desktop.yml
Desktop/: .gitignore  Cargo.toml  README.md  build-msix.ps1  dev-install.ps1
Desktop/crates/cloudreve-api/: Cargo.toml  LICENSE  README.md
Desktop/crates/cloudreve-api/src/: client.rs  error.rs  lib.rs
Desktop/crates/cloudreve-api/src/api/: explorer.rs  mod.rs  site.rs  user.rs  workflow.rs
Desktop/crates/cloudreve-api/src/boolset/: mod.rs
Desktop/crates/cloudreve-api/src/models/: dashboard.rs  explorer.rs  mod.rs  share.rs  uri.rs  user.rs  vas.rs
Desktop/locales/: app.yaml
Desktop/package/: AppxManifest.xml  resources.pri
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/ui/: index.html  package.json
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(drive)/: layout.tsx
cloudreve-official-frontend/: index.html  package.json  vite.config.ts
cloudreve-official-frontend/src/: App.tsx  brand.css  i18n.ts  main.tsx  vite-env.d.ts
components/: app-shell.tsx  page-state.tsx
components/auth/: auth-card.tsx  reset-password-card.tsx
components/file-manager/: context-menu.tsx  dialogs.tsx  file-actions.tsx  file-grid.tsx  file-icon.tsx  file-manager.tsx  file-table.tsx  (+1 more)
contexts/: auth-context.tsx
docs/: api-support.md
hooks/: use-async.ts  use-toast.ts
lib/: file-preview.ts  file-uri.ts  qr.ts  share-url.ts  utils.ts
(+1022 files in other folders)
