[package]
name = "cloudreve-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
url = "2.5"
bytes = "1.5"
urlencoding = "2.1"
percent-encoding = "2.3"
anyhow = "1.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"

